--- a/0header.html
+++ b/0header.html
@@ -1,11 +1,8 @@
-
-
-
 <header class="bg-dark py-3">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-auto d-flex align-items-center">
-                <a href="index.html"> <img src="./IMG/ome-logo-200px.png" alt="Logo" class="logo">  </a><!-- Adjust path and dimensions as needed -->
+                <a href="0index.html"> <img src="./IMG/ome-logo-200px.png" alt="Logo" class="logo">  </a><!-- Adjust path and dimensions as needed -->
                 <div class="header-text">
                     <h2 class="text-white"> สำนักการศึกษาทหาร</h2>
                     <h4 class="text-white"> สถาบันวิชาการป้องกันประเทศ</h4>
@@ -14,17 +11,17 @@
 
             <div class="col d-flex justify-content-end">
                 <div class="dropdown me-2">
-                <a href="index.html"><button type="button" class="btn btn-light">หน้าแรก</button></a>
+                <a href="0index.html"><button type="button" class="btn btn-light">หน้าแรก</button></a>
             </div>
                 <div class="dropdown me-2">
                     <button class="btn dropdown-toggle btn-yellow" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                         เกี่ยวกับหน่วย
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="./OME_PAGE/ceo.html" >ผู้บังคับบัญชา</a></li>
-                        <li><a class="dropdown-item" href="./OME_PAGE/story.html">ประวัติ สศท.สปท.</a> </li>
-                        <li><a class="dropdown-item" href="./OME_PAGE/vision-mission.html">วิสัยทัศน์ และ พันธกิจ</a></li>
-                        <li><a class="dropdown-item" href="./OME_PAGE/unit.html">หน่วยขึ้นตรง สศท.สปท.</a></li>
+                        <li><a class="dropdown-item" href="./0ceo.html" >ผู้บังคับบัญชา</a></li>
+                        <li><a class="dropdown-item" href="./0story.html">ประวัติ สศท.สปท.</a> </li>
+                        <li><a class="dropdown-item" href="./0vision.html">วิสัยทัศน์ และ พันธกิจ</a></li>
+                        <li><a class="dropdown-item" href="./0unit.html">หน่วยขึ้นตรง สศท.สปท.</a></li>
                     </ul>
                 </div>
                 <div class="dropdown me-2">
