--- a/0index.html
+++ b/0index.html
@@ -11,6 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <!-- Custom CSS -->
+  <link rel="stylesheet" href="./CSS/style-newcard.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sarabun&display=swap">
   <link rel="stylesheet" href="./CSS/style-map.css">
   <link rel="stylesheet" href="./CSS/style-head.css">
