--- a/0index.html
+++ b/0index.html
@@ -98,25 +98,16 @@ body {font-family: 'Sarabun', sans-serif;}
 <!--------------------------------------- Footer ---------------------------------------------->
 <hr style="margin: auto;" width=60%>
 <div id="footer">
-  <p id="visitor-counter" style="text-align: center;">Visitor Count: <span id="count">0</span></p>
+
 </div>
 
-<script>
-// JavaScript code to handle the visitor counter
-(function() {
-  // Check if 'visitorCount' exists in localStorage
-  if (!localStorage.getItem('visitorCount')) {
-    localStorage.setItem('visitorCount', 0);
-  }
+    <div id="footer" class="text-center">
+    <p>Visitor Count:</p>
+    <!-- Visitor Counter from hitwebcounter.com -->
+    <a href="https://www.hitwebcounter.com" target="_blank">
+      <img src="https://hitwebcounter.com/counter/counter.php?page=8179615&style=0005&nbdigits=5&type=page&init=0" title="Free Counter" Alt="web counter" border="0">
+    </a>
+  </div>
 
-  // Increment the visitor count
-  let count = parseInt(localStorage.getItem('visitorCount'), 10);
-  count++;
-  localStorage.setItem('visitorCount', count);
-
-  // Update the visitor counter display
-  document.getElementById('count').innerText = count;
-})();
-</script>
 
 </html>
