--- a/0footer.html
+++ b/0footer.html
@@ -1,9 +1,12 @@
 <br><br>
+
 <footer class="footer mt-auto py-3" style="background-color: #212529; height: 100px;">
-        <p style= "text-align : center; color: aliceblue;"   >  &#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
-        <p style= "text-align : center; color: aliceblue;"   >  สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
-    <!-- Visitor Counter from hitwebcounter.com -->
-    <a href="https://www.hitwebcounter.com" target="_blank">
-      <img src="https://hitwebcounter.com/counter/counter.php?page=8179615&style=0005&nbdigits=5&type=page&init=0" title="Free Counter" Alt="web counter" border="0">
-    </a>
+    <div class="container text-center">
+        <p style="color: aliceblue;">&#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
+        <p style="color: aliceblue;">สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
+        <!-- Visitor Counter from hitwebcounter.com -->
+        <a href="https://www.hitwebcounter.com" target="_blank">
+          <img src="https://hitwebcounter.com/counter/counter.php?page=8179615&style=0005&nbdigits=5&type=page&init=0" title="Free Counter" alt="web counter" style="display: block; margin: 0 auto;">
+        </a>
+    </div>
 </footer>
