--- a/0footer.html
+++ b/0footer.html
@@ -4,5 +4,10 @@
     <div class="container text-center">
         <p style="color: aliceblue;">&#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
         <p style="color: aliceblue;">สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
+
+        <a href="https://www.hitwebcounter.com" target="_blank">
+          <img src="https://hitwebcounter.com/counter/counter.php?page=8179615&style=0005&nbdigits=5&type=page&init=0" title="Free Counter" alt="web counter" style="display: block; margin: 0 auto;">
+        </a>
+        
     </div>
 </footer>
