--- a/0footer.html
+++ b/0footer.html
@@ -4,5 +4,10 @@
     <div class="container text-center">
         <p style="color: aliceblue;">&#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
         <p style="color: aliceblue;">สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
+        
+ <a href='http://www.freevisitorcounters.com'>on Freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=55af4608960a74bdeef0596f37f61ebbd18fe83c'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1184057/t/2"></script>
+
+        
     </div>
 </footer>
