--- a/0footer.html
+++ b/0footer.html
@@ -5,9 +5,7 @@
         <p style="color: aliceblue;">&#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
         <p style="color: aliceblue;">สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
         
- <a href='http://www.freevisitorcounters.com'>on Freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=55af4608960a74bdeef0596f37f61ebbd18fe83c'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1184057/t/2"></script>
-
+<div style="text-align:center;"><script type="text/javascript" src="https://services.webestools.com/cpt_visitors/73071-1-4.js"></script></div><a href="https://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free"><img src="https://www.webestools.com/images/ban03.gif" alt="Tools services webmasters counters generators scripts tutorials free" /></a>
         
     </div>
 </footer>
