--- a/0footer.html
+++ b/0footer.html
@@ -5,7 +5,6 @@
         <p style="color: aliceblue;">&#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
         <p style="color: aliceblue;">สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
         
-<div style="text-align:center;"><script type="text/javascript" src="https://services.webestools.com/cpt_visitors/73071-1-4.js"></script></div><a href="https://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free"><img src="https://www.webestools.com/images/ban03.gif" alt="Tools services webmasters counters generators scripts tutorials free" /></a>
-        
+<img src="https://hitwebcounter.com/counter/counter.php?page=13488587&style=0007&nbdigits=5&type=page&initCount=50" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                    
     </div>
 </footer>
