--- a/0footer.html
+++ b/0footer.html
@@ -1,10 +1,9 @@
 <br><br>
 
-<footer class="footer mt-auto py-3" style="background-color: #212529; height: 100px;">
+<footer class="footer mt-auto py-3" style="background-color: #212529; height: 150px;">
     <div class="container text-center">
         <p style="color: aliceblue;">&#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
         <p style="color: aliceblue;">สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
-        
-<img src="https://hitwebcounter.com/counter/counter.php?page=13488587&style=0007&nbdigits=5&type=page&initCount=50" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                    
+        <img src="https://hitwebcounter.com/counter/counter.php?page=13488987&style=0038&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" />      
     </div>
 </footer>
