--- a/0footer.html
+++ b/0footer.html
@@ -4,6 +4,6 @@
     <div class="container text-center">
         <p style="color: aliceblue;">&#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
         <p style="color: aliceblue;">สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
-        <img src="https://hitwebcounter.com/counter/counter.php?page=13488987&style=0038&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" />      
+    <img src="https://hitwebcounter.com/counter/counter.php?page=13489084&style=0038&nbdigits=5&type=ip&initCount=190" title="Counter Widget" Alt="Visit counter For Websites"   border="0" />
     </div>
 </footer>
