--- a/0footer.html
+++ b/0footer.html
@@ -4,6 +4,9 @@
     <div class="container text-center">
         <p style="color: aliceblue;">&#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
         <p style="color: aliceblue;">สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
-    <img src="https://hitwebcounter.com/counter/counter.php?page=13489084&style=0038&nbdigits=5&type=ip&initCount=190" title="Counter Widget" Alt="Visit counter For Websites"   border="0" />
+
+         <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=9a80f215fd1a332e1359d7ee33a0a58915060d9d'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1187112/t/5"></script>
+    
     </div>
 </footer>
