--- a/0footer.html
+++ b/0footer.html
@@ -4,9 +4,9 @@
     <div class="container text-center">
         <p style="color: aliceblue;">&#169; พัฒนาเว็บไซต์โดย กองวิทยาการ</p>
         <p style="color: aliceblue;">สำนักการศึกษาทหาร สถาบันวิชาการป้องกันประเทศ</p>
- <a href='http://www.freevisitorcounters.com'>ยอดผู้เข้าชม</a>
-         <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=9a80f215fd1a332e1359d7ee33a0a58915060d9d'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1187112/t/5"></script>
+
+        <script type="text/javascript" src="https://www.counters-free.net/count/fm09"></script><br>
+ <a href='http://www.freevisitorcounters.com'>free counters</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=70b4ad6dd88fa1fdb498ac0a4206cb6cc7c81366'></script>
     
     </div>
 </footer>
